task-2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-kube-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-kube-demo
  template:
    metadata:
      labels:
        app: flask-kube-demo
    spec:
      containers:
      - name: flask-kube-demo
        image: flask-kube-demo:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
