task-2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-kube-service
spec:
  type: NodePort
  selector:
    app: flask-kube-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
